@@ -1575,6 +1575,7 @@
 /none/tests/bug290061
 /none/tests/bug491394
 /none/tests/bug492678
+/none/tests/bug514094
 /none/tests/closeall
 /none/tests/coolo_sigaction
 /none/tests/coolo_strlen
@@ -1915,6 +1916,7 @@
 /none/tests/linux/mremap6
 /none/tests/linux/open_client
 /none/tests/linux/pthread-stack
+/none/tests/linux/readlinkat_self
 /none/tests/linux/stack-overflow
 /none/tests/linux/getdents_filter
 
@@ -2317,6 +2319,7 @@
 /none/tests/solaris/proc_auxv_multiple
 /none/tests/solaris/proc_psinfo
 /none/tests/solaris/pthread-stack
+/none/tests/solaris/readlinkat_self
 /none/tests/solaris/reserve_sysstat_addr
 /none/tests/solaris/reserve_sysstat_zone_addr
 /none/tests/solaris/resolv
