@@ -1,0 +1,1 @@
+prog: readlinkat_self
